Character / realm lists / others updated

--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
                        aria-expanded="false" id="realm-title">
-                        Realm:
+                        Realm: None
                     </a>
                     <ul class="dropdown-menu" id="realm">
+                        <input type="text" id="dropdownSearch" placeholder="Search...">
                     </ul>
                 </li>
             </ul>
@@ -102,7 +103,7 @@
         </ul>
     </nav>
     <main class="col">
-        <h1 class="display-1">FindThem.PVP</h1>
+        <h1 class="display-1">⚔️FindThem.PVP⚔️</h1>
         <p class="lead">Type into the search with your favorite World of Warcraft pvper's character name, and we do the
             rest!</p>
     </main>
