--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </li>
             </ul>
             <form class="d-flex" role="search" id="top-search">
-                <input class="form-control me-2" type="search" placeholder="Select Realm Then Type Character Name"
+                <input class="form-control me-2" type="search" placeholder="Select A Realm Then Type Character Name"
                        aria-label="Search"
                        name="query">
                 <button class="btn btn-outline-success" type="submit">Search</button>
@@ -94,11 +94,13 @@
                    target="_blank">Armory</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://www.twitch.tv/directory/game/World%20of%20Warcraft" id="twitch.tv"
-                   target="_blank">Twitch List</a>
+                <a class="nav-link" href="https://www.twitch.tv/directory/game/World%20of%20Warcraft"
+                   id="closes-match" target="_blank">Closes
+                    Matching Stream</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" target="_blank">Link</a>
+                <a class="nav-link" href="https://www.twitch.tv/directory/game/World%20of%20Warcraft" id="twitch.tv"
+                   target="_blank">Possible Stream List</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link disabled" target="_blank">Disabled</a>
