Got everything I wanted working, aka updated possible streams / armory / closes matching stream / etc...

--- a/index.html
+++ b/index.html
@@ -98,12 +98,13 @@
                    id="closes-match" target="_blank">Closes
                     Matching Stream</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="https://www.twitch.tv/directory/game/World%20of%20Warcraft" id="twitch.tv"
-                   target="_blank">Possible Stream List</a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
+                   aria-expanded="false" id="streams">Possible Stream List</a>
+                <ul class="dropdown-menu" id="twitch.tv"></ul>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" target="_blank">Disabled</a>
+                <a class="nav-link disabled" target="_blank"></a>
             </li>
         </ul>
     </nav>
