--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="https://www.twitch.tv/directory/game/World%20of%20Warcraft"
-                   id="closes-match" target="_blank">Closes
+                   id="closes-match" target="_blank">Closest
                     Matching Stream</a>
             </li>
             <li class="nav-item dropdown">
