Examples of how to test for grading.

--- a/report.html
+++ b/report.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    ****IMPORTANT**** For testing purposes go to the WOW armory by clicking on armory on the first load of the website
+    and search for random characters.  Get the character you want and the realm and then test away.
+    OR just use "Kelthuzad" <--- server "Xzz" <--- Character OR "illidan" <--- server "utterlycrazy" <--- Character.
+
     - Link to deployed website on GitHub: https://ryansnoobcentral.github.io/username_to_twitch_account/
 
     - Description:
